--- a/homepage.html
+++ b/homepage.html
@@ -17,6 +17,17 @@
             <p id = "name" contenteditable="true" > Thea</p>
         </div>
 
+        <div class="icons">
+            <div class="github">
+                <a href="https://github.com/"><img src="assets/github.png"></a>
+            </div>
+            <div class="youtube">
+                <a href="https://www.youtube.com/"><img src="assets/youtube.png"></a>
+            </div>
+            <div class="gmail">
+                <a href="https://mail.google.com/mail/"> <img src= "assets/mail.jpg" ></a>
+            </div>
+        </div>
         <script src="js/homepage.js"></script>
     </body>
 </html>
